fixed hamburger and nav list alignment

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,12 +4,31 @@
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
+  color: var(--fontColor);
+
+  // COLORS CUSTOM PROPERTIES :
+  --bodyColor: #fff;
+
+  --fontColor: #000;
+}
+
+//------GENERAL
+
+a {
+  text-decoration: none;
+  color: var(--fontColor);
 }
 
 //------DISPLAY
 
+body {
+  background-color: #3f3e3f;
+  padding: 1rem;
+}
+
 .main-container {
-  border: double 2px blueviolet;
+  background-color: var(--bodyColor);
+  // border: double 2px blueviolet;
   height: 100vh;
   width: 100%;
   //Layout
@@ -21,10 +40,10 @@
 }
 
 .header {
-  border: solid 1px green;
+  // border: solid 1px green;
   grid-area: "h";
   width: 100%;
-  display: inline-block;
+  height: 20vh;
 }
 
 .main {
@@ -38,29 +57,34 @@
 // -----------NAVIGATION
 
 .nav {
-  border: solid 1px red;
+  // border: solid 1px red;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 55px;
 }
 
 .hamburger {
   position: fixed;
-  content: "";
-  border: solid 1px orangered;
-  height: 50px;
-  width: 50px;
+  // border: solid 1px orangered;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
 }
 
 .top-line {
   position: absolute;
-  width: 20px;
+  top: 8px;
+  width: 100%;
   height: 2px;
   background-color: black;
 }
 
 .bottom-line {
-  width: 20px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
   height: 2px;
   background-color: black;
 }
@@ -68,8 +92,17 @@
 // NAVIGATION ON CLICK HAMBURGER MOBILE + DESKTOP
 
 .nav-list {
-  border: 1px solid black;
+  // border: 1px solid black;
   display: flex;
   flex-direction: row;
-  visibility: hidden;
+  width: 100%;
+  justify-content: center;
+  // visibility: hidden;
+}
+
+.nav-item {
+  // border: solid 1px brown;
+  padding: 0 2rem;
+  width: 33%;
+  text-align: center;
 }
